feat(project): add environment API (#1)
